--- a/admin/css/bp-tag-groups-admin.css
+++ b/admin/css/bp-tag-groups-admin.css
@@ -2,3 +2,4 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+.bpgrptg-add-tag-error{border: 1px solid #FF000C;border-radius: 5px;color: #FF000C;padding: 5px;display: none;}
